--- a/views/index.mustache
+++ b/views/index.mustache
@@ -12,7 +12,7 @@
 		<script src="http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
 	<![endif]-->
 
-	<title>The Varsity | Canvas</title>
+	<title>The Varsity | {{ tags.title }}</title>
     <script src="https://maps.googleapis.com/maps/api/js?libraries=visualization&key=AIzaSyAYA1eCg1ToFOxVfVxqZHzqNnNJFgnLNYw"></script>
   </head>
 
