--- a/views/create.mustache
+++ b/views/create.mustache
@@ -34,15 +34,11 @@
 	  		</div>
 
 	  		<div class="col-md-4">
-		  		<h2>Create Post</h2>
-		  		<form action="/api/venue" method="post">
+		  		<h2>Create District</h2>
+		  		<form action="/api/district" method="post">
 		  			<input type="text" style="margin-bottom:6px" name="name" placeholder="Name" /><br />
-		  			<input type="text" style="margin-bottom:6px" name="street" placeholder="Street" /><br />
-		  			<input type="text" style="margin-bottom:6px" name="city" placeholder="City" /><br />
-		  			<input type="text" style="margin-bottom:6px" name="state" placeholder="State" /><br />
-		  			<input type="text" style="margin-bottom:6px" name="zip" placeholder="Zip" /><br />
-		  			<input type="text" style="margin-bottom:6px" name="instagram" placeholder="Instagram" /><br />
-		  			<input type="text" style="margin-bottom:6px" name="facebook" placeholder="Facebook" /><br />
+		  			<input type="text" style="margin-bottom:6px" name="zips" placeholder="Zips" /><br />
+		  			<input type="text" style="margin-bottom:6px" name="geo" placeholder="Lat,Lng" /><br />
 		  			<input type="submit" style="margin-bottom:6px" value="Create" /><br />
 		  		</form>
 	  		</div>
