renamed form params

--- a/views/create.mustache
+++ b/views/create.mustache
@@ -37,8 +37,8 @@
 		  		<h2>Create District</h2>
 		  		<form action="/api/district" method="post">
 		  			<input type="text" style="margin-bottom:6px" name="name" placeholder="Name" /><br />
-		  			<input type="text" style="margin-bottom:6px" name="zips" placeholder="Zips" /><br />
-		  			<input type="text" style="margin-bottom:6px" name="geo" placeholder="Lat,Lng" /><br />
+		  			<input type="text" style="margin-bottom:6px" name="zipCodes" placeholder="Zips" /><br />
+		  			<input type="text" style="margin-bottom:6px" name="latlng" placeholder="Lat,Lng" /><br />
 		  			<input type="submit" style="margin-bottom:6px" value="Create" /><br />
 		  		</form>
 	  		</div>
