Team schema and controller

--- a/views/create.mustache
+++ b/views/create.mustache
@@ -20,8 +20,8 @@
   	<div class="container">
   		<div class="row">
 	  		<div class="col-md-4 col-md-offset-2">
-		  		<h2>Create Venue</h2>
-		  		<form action="/api/venue" method="post">
+		  		<h2>Create Team</h2>
+		  		<form action="/api/team" method="post">
 		  			<input type="text" style="margin-bottom:6px" name="name" placeholder="Name" /><br />
 		  			<input type="text" style="margin-bottom:6px" name="street" placeholder="Street" /><br />
 		  			<input type="text" style="margin-bottom:6px" name="city" placeholder="City" /><br />
