--- a/views/index.mustache
+++ b/views/index.mustache
@@ -21,6 +21,18 @@
 
 
     <script src="https://maps.googleapis.com/maps/api/js?libraries=visualization&key=AIzaSyAYA1eCg1ToFOxVfVxqZHzqNnNJFgnLNYw"></script>
+
+	<script src="https://www.gstatic.com/firebasejs/3.6.0/firebase.js"></script>
+	<script>
+	  var config = {
+	    apiKey: "AIzaSyAdKSGhUOw1_-PNq9n9vXDkk_nuXj0lZzE",
+	    authDomain: "thevarsity-6abb7.firebaseapp.com",
+	    databaseURL: "https://thevarsity-6abb7.firebaseio.com",
+	    storageBucket: "thevarsity-6abb7.appspot.com",
+	    messagingSenderId: "566744350980"
+	  };
+	  firebase.initializeApp(config);
+	</script>    
 	<script type="text/javascript">window.__PRELOADED_STATE__ = {{{preloadedState}}}</script>
 	<script type="text/javascript" src="/build/vendor.min.js"></script>
 	<script type="text/javascript" src="/build/bundle.js"></script>
