--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -14,3 +14,11 @@
     background: rgba(0,0,0,0.5);
     z-index: 9999;
 }
+
+.gradient {
+    background: -webkit-linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0)); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0)); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0)); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0)); /* Standard syntax */
+    background-color: rgba(0,0,0,0) !important;
+}
