--- a/views/create.mustache
+++ b/views/create.mustache
@@ -37,6 +37,7 @@
 		  		<h2>Create District</h2>
 		  		<form action="/api/district" method="post">
 		  			<input type="text" style="margin-bottom:6px" name="name" placeholder="Name" /><br />
+		  			<input type="text" style="margin-bottom:6px" name="image" placeholder="Image" /><br />
 		  			<input type="text" style="margin-bottom:6px" name="city" placeholder="City" /><br />
 		  			<input type="text" style="margin-bottom:6px" name="state" placeholder="State" /><br />
 		  			<input type="text" style="margin-bottom:6px" name="zipCodes" placeholder="Zips" /><br />
