--- a/views/index-mobile.mustache
+++ b/views/index-mobile.mustache
@@ -34,8 +34,6 @@
                 </div>
 	        </div>
 
-
-
 	        <div class="page-content">
 	            <div class="list-block accordion-list">
 	              <ul class="menu">
@@ -625,7 +623,9 @@
 	  </div>
 	</div>
 
+	<script type="text/javascript">window.__PRELOADED_STATE__ = {{{preloadedState}}}</script>
 	<script type="text/javascript" src="/build/mobile/vendor.min.js"></script>
+	<script type="text/javascript" src="/build/bundle.js"></script>
 
 </body>
 </html>
