mobile layout components

--- a/views/index-mobile.mustache
+++ b/views/index-mobile.mustache
@@ -15,6 +15,7 @@
 </head>
 
 <body class="theme-pink">
+
 	<div class="statusbar-overlay"></div>
 	<div class="panel-overlay"></div>
 	<div class="panel panel-left panel-cover sidebar">
@@ -173,20 +174,17 @@
 	  </div>
 	</div>
 	    
-	    
-	    
 	<div class="views pageview" >
 	  <div class="view view-main">
 	    <div class="pages">
 
 
 <div data-page="home" class="page navbar-fixed">
+
   <div class="navbar">
     <div class="navbar-inner">
         <div class="left sliding">
-        	<a href="#" data-panel="left" class="open-panel link icon-only">
-        		<i class="fa fa-bars"></i>
-        	</a>
+        	<a href="#" data-panel="left" class="open-panel link icon-only"><i class="fa fa-bars"></i></a>
         </div>
         <div class="center">MaxSmart</div>
         <div class="right sliding">
@@ -200,6 +198,9 @@
 
   <div class="page-content hide-bars-on-scroll" >
     <div data-pagination=".swiper-pagination" data-paginationHide="true" class="swiper-container largebanner  swiper-init">
+    	
+	<div id="root">{{{ react }}}</div>
+
 
     </div>
       
