left and right panel components

--- a/views/index-mobile.mustache
+++ b/views/index-mobile.mustache
@@ -7,217 +7,19 @@
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
 	<meta name="theme-color" content="#2196f3">
-	<title>Max Smart</title>
+	<title>The Varsity</title>
 
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400,300,500,700|Oswald:400,300,700" rel="stylesheet" type="text/css">
 	<link rel="stylesheet" href="/build/mobile/css/style.min.css">
-
 </head>
 
-<body class="theme-pink">
 
-	<div class="statusbar-overlay"></div>
-	<div class="panel-overlay"></div>
-	<div class="panel panel-left panel-cover sidebar">
-	    <div class="view">
-	    <div class=" ">
-	      <div data-page="panel-left" class="sidemenu leftmenusmall gradient">
-	        <div class="item-content userprofile">
-                <div class="item-media"><img src="/mobile/img/pic1.png" width="44" alt=""/></div>
-                <div class="item-inner">
-                  <div class="item-title-row">
-                    <div class="item-title">Max Smith</div>
-                  </div>
-                  <div class="item-subtitle">India</div>
-                </div>
-	        </div>
-
-	        <div class="page-content">
-	            <div class="list-block accordion-list">
-	              <ul class="menu">
-	               <li class="accordion-item"><a href="#" class="item-content item-link">
-	                    <div class="item-inner">
-	                      <div class="item-title"><i class="fa fa-tasks"></i>Menu</div>
-	                    </div></a>
-	                  <div class="accordion-item-content">
-	                    <div class="content-block">
-	                        <ul>
-	                            <li><a href="#" data-panel="left" class="item-link  close-panel"><span>This is overlay</span></a></li>
-	                            <li><a href="#" data-panel="right" class="item-link open-panel"><span>Reavel Sidemenu</span></a></li>
-	                            <li><a href="todo.html" class="item-link close-panel"><span>Floating Speed Dial</span></a></li>
-	                            <li><a href="landing.html" class="item-link close-panel"><span>Landing</span></a></li>
-	                        </ul>
-	                    </div>
-	                  </div>
-	                </li>
-	                  
-	                  
-	                <li class="accordion-item"><a href="#" class="item-content item-link">
-	                    <div class="item-inner">
-	                      <div class="item-title"><i class="fa fa-home"></i>Home</div>
-	                    </div></a>
-	                  <div class="accordion-item-content">
-	                    <div class="content-block">
-	                        <ul>
-	                            <li><a href="home.html" class="item-link close-panel"><span>Cover Slider</span></a></li>
-	                            <li><a href="home_classic.html" class="item-link close-panel"><span>Classic</span></a></li>                            
-	                            <li><a href="home_dashboard.html" class="item-link close-panel"><span>Dashboard</span></a></li>
-	                            <li><a href="home_reader.html" class="item-link close-panel"><span>Reader Home</span></a></li>
-	                            <li><a href="home_shop.html" class="item-link close-panel"><span>Shop</span></a></li>
-	                        </ul>
-	                    </div>
-	                  </div>
-	                </li>
-	                <li class="accordion-item"><a href="#" class="item-content item-link">
-	                    <div class="item-inner">
-	                      <div class="item-title"><i class="fa fa-heart"></i>About</div>
-	                    </div></a>
-	                  <div class="accordion-item-content">
-	                    <div class="content-block">
-	                        <ul>
-	                            <li><a href="about.html" class="item-link close-panel"><span>About</span></a></li>
-	                        </ul>
-	                    </div>
-	                  </div>
-	                </li>
-	                <li class="accordion-item"><a href="#" class="item-content item-link">
-	                    <div class="item-inner">
-	                      <div class="item-title"><i class="fa fa-briefcase"></i>Services</div>
-	                    </div></a>
-	                  <div class="accordion-item-content">
-	                    <div class="content-block">
-	                        <ul>
-	                            <li><a href="services.html" class="item-link close-panel"><span>Services</span></a></li>
-	                        </ul>
-	                    </div>
-	                  </div>
-	                </li>
-                  
-	              </ul>
-	            </div>         
-	        </div>        
-	      </div>
-	    </div>
-	  </div>
-	</div>
-	    
-	<div class="panel panel-right panel-reveal sidebar">
-	  <div class="view">
-	    <div class=" ">
-	      <div data-page="panel-left" class="sidemenu leftmenusmall gradient">
-	        <div class="item-content userprofile">
-	                <div class="item-media"><img src="/mobile/img/pic1.png" width="44"  alt=""/></div>
-	                <div class="item-inner">
-	                  <div class="item-title-row">
-	                    <div class="item-title">Max Smith</div>
-	                  </div>
-	                  <div class="item-subtitle">India</div>
-	                </div>
-	        </div>
-	        <div class="page-content">
-	            <div class="inputs-list content-block" >
-	                  <h2 class="maintitle  center">Contact us</h2>
-	                    <p class="center" >We will be back on your provided email address</p>
-	              </div>
-	              <div class="list-block">
-	                  <ul>
-	                  <li>
-	                    <div class="item-content">
-	                      <div class="item-inner">
-	                        <div class="item-title label">Your name</div>
-	                        <div class="item-input">
-	                          <input type="text" placeholder=""/>
-	                        </div>
-	                      </div>
-	                    </div>
-	                  </li>
-	                  <li>
-	                    <div class="item-content">
-	                      <div class="item-inner">
-	                        <div class="item-title label">E-mail</div>
-	                        <div class="item-input">
-	                          <input type="email" placeholder=""/>
-	                        </div>
-	                      </div>
-	                    </div>
-	                  </li>
-	                  <li>
-	                    <div class="item-content">
-	                      <div class="item-inner">
-	                        <div class="item-title label">Phone</div>
-	                        <div class="item-input">
-	                          <input type="tel" placeholder=""/>
-	                        </div>
-	                      </div>
-	                    </div>
-	                  </li>
-	                  <li class="align-top">
-	                    <div class="item-content">
-	                      <div class="item-inner">
-	                        <div class="item-title label">Message/Queries</div>
-	                        <div class="item-input">
-	                          <textarea class="resizable"></textarea>
-	                        </div>
-	                      </div>
-	                    </div>
-	                  </li>
-	                </ul>
-	                </div>
-	         
-	        </div>
-
-	         <div class="buttonbar row no-gutter">
-	            <a href="contactus.html" class=" button button-fill col-100 close-panel">Locate Us</a>
-	        </div>
-	      </div>
-	    </div>
-	  </div>
-	</div>
-	    
-	<div class="views pageview" >
-	  <div class="view view-main">
-	    <div class="pages">
-
-
-<div data-page="home" class="page navbar-fixed">
-
-  <div class="navbar">
-    <div class="navbar-inner">
-        <div class="left sliding">
-        	<a href="#" data-panel="left" class="open-panel link icon-only"><i class="fa fa-bars"></i></a>
-        </div>
-        <div class="center">MaxSmart</div>
-        <div class="right sliding">
-        	<a href="#"  data-panel="right" class="open-panel link icon-only">
-        		<i class="fa fa-envelope"></i>
-        	</a>
-        </div>
-    </div>
-  </div>
-
-
-  <div class="page-content hide-bars-on-scroll" >
-    <div data-pagination=".swiper-pagination" data-paginationHide="true" class="swiper-container largebanner  swiper-init">
-    	
+<body class="theme-pink">	    
 	<div id="root">{{{ react }}}</div>
 
-
-    </div>
-      
-      
-
-  </div>
-</div>
-
-
-
-
-	  </div>
-	</div>
 
 	<script type="text/javascript">window.__PRELOADED_STATE__ = {{{preloadedState}}}</script>
 	<script type="text/javascript" src="/build/mobile/vendor.min.js"></script>
 	<script type="text/javascript" src="/build/bundle.js"></script>
-
 </body>
 </html>
