render map on right panel

--- a/views/index-mobile.mustache
+++ b/views/index-mobile.mustache
@@ -18,6 +18,8 @@
 	<div id="root">{{{ react }}}</div>
 
 
+    <script src="https://maps.googleapis.com/maps/api/js?libraries=visualization&key=AIzaSyAYA1eCg1ToFOxVfVxqZHzqNnNJFgnLNYw"></script>
+ 
 	<script type="text/javascript">window.__PRELOADED_STATE__ = {{{preloadedState}}}</script>
 	<script type="text/javascript" src="/build/mobile/vendor.min.js"></script>
 	<script type="text/javascript" src="/build/bundle.js"></script>
