--- a/public/email/templates/newsletter/newsletter.html
+++ b/public/email/templates/newsletter/newsletter.html
@@ -123,7 +123,7 @@
                 <tr>
                     <td align="center" valign="top" style="padding: 15px 0;" class="logo">
                         <a href="http://litmus.com" target="_blank">
-                            <img alt="Logo" src="logo-1.jpg" width="60" height="60" style="display: block; font-family: Helvetica, Arial, sans-serif; color: #ffffff; font-size: 16px;" border="0">
+                            <img alt="Logo" src="https://thevarsity.herokuapp.com/email/templates/newsletter/logo-1.jpg" width="60" height="60" style="display: block; font-family: Helvetica, Arial, sans-serif; color: #ffffff; font-size: 16px;" border="0">
                         </a>
                     </td>
                 </tr>
@@ -150,7 +150,7 @@
                             <tr>
                               	<td class="padding" align="center">
                                     <a href="http://litmus.com" target="_blank">
-                                        <img src="hero-1.jpg" width="500" height="400" border="0" alt="Insert alt text here" style="display: block; color: #666666;  font-family: Helvetica, arial, sans-serif; font-size: 16px;" class="img-max">
+                                        <img src="https://thevarsity.herokuapp.com/email/templates/newsletter/hero-1.jpg" width="500" height="400" border="0" alt="Insert alt text here" style="display: block; color: #666666;  font-family: Helvetica, arial, sans-serif; font-size: 16px;" class="img-max">
                                     </a>
                                 </td>
                             </tr>
@@ -239,7 +239,7 @@
                                                             <td style="padding: 20px 0 30px 0;">
                                                                 <table cellpadding="0" cellspacing="0" border="0" width="100%">
                                                                     <tr>
-                                                                        <td align="center" bgcolor="#F5F7FA" valign="middle"><a href="http://litmus.com" target="_blank"><img src="news-1.jpg" width="240" height="130" style="display: block; color: #666666; font-family: Helvetica, arial, sans-serif; font-size: 13px; width: 240px; height: 130px;" alt="Fluid images" border="0" class="img-max"></a></td>
+                                                                        <td align="center" bgcolor="#F5F7FA" valign="middle"><a href="http://litmus.com" target="_blank"><img src="https://thevarsity.herokuapp.com/email/templates/newsletter/news-1.jpg" width="240" height="130" style="display: block; color: #666666; font-family: Helvetica, arial, sans-serif; font-size: 13px; width: 240px; height: 130px;" alt="Fluid images" border="0" class="img-max"></a></td>
                                                                     </tr>
                                                                     <tr>
                                                                         <td align="center" style="padding: 15px 0 0 0; font-family: Arial, sans-serif; color: #333333; font-size: 20px;" bgcolor="#F5F7FA">News Item</td>
@@ -277,7 +277,7 @@
                                                                         <td style="padding: 20px 0 30px 0;">
                                                                             <table cellpadding="0" cellspacing="0" border="0" width="100%">
                                                                                 <tr>
-                                                                                    <td align="center" bgcolor="#F5F7FA" valign="middle"><a href="http://litmus.com" target="_blank"><img src="news-2.jpg" width="240" height="130" style="display: block; color: #666666; font-family: Helvetica, arial, sans-serif; font-size: 13px; width: 240px; height: 130px;" alt="alt text here" border="0" class="img-max"></a></td>
+                                                                                    <td align="center" bgcolor="#F5F7FA" valign="middle"><a href="http://litmus.com" target="_blank"><img src="https://thevarsity.herokuapp.com/email/templates/newsletter/news-2.jpg" width="240" height="130" style="display: block; color: #666666; font-family: Helvetica, arial, sans-serif; font-size: 13px; width: 240px; height: 130px;" alt="alt text here" border="0" class="img-max"></a></td>
                                                                                 </tr>
                                                                                 <tr>
                                                                                     <td align="center" style="padding: 15px 0 0 0; font-family: Arial, sans-serif; color: #333333; font-size: 20px;" bgcolor="#F5F7FA">News Item</td>
@@ -339,7 +339,7 @@
                                                             <td style="padding: 20px 0 30px 0;">
                                                                 <table cellpadding="0" cellspacing="0" border="0" width="100%">
                                                                     <tr>
-                                                                        <td align="center" bgcolor="#F5F7FA" valign="middle"><a href="http://litmus.com" target="_blank"><img src="news-3.jpg" width="240" height="130" style="display: block; color: #666666; font-family: Helvetica, arial, sans-serif; font-size: 13px; width: 240px; height: 130px;" alt="alt text here" border="0" class="img-max"></a></td>
+                                                                        <td align="center" bgcolor="#F5F7FA" valign="middle"><a href="http://litmus.com" target="_blank"><img src="https://thevarsity.herokuapp.com/email/templates/newsletter/news-3.jpg" width="240" height="130" style="display: block; color: #666666; font-family: Helvetica, arial, sans-serif; font-size: 13px; width: 240px; height: 130px;" alt="alt text here" border="0" class="img-max"></a></td>
                                                                     </tr>
                                                                     <tr>
                                                                         <td align="center" style="padding: 15px 0 0 0; font-family: Arial, sans-serif; color: #333333; font-size: 20px;" bgcolor="#F5F7FA">News Item</td>
@@ -377,7 +377,7 @@
                                                                         <td style="padding: 20px 0 30px 0;">
                                                                             <table cellpadding="0" cellspacing="0" border="0" width="100%">
                                                                                 <tr>
-                                                                                    <td align="center" bgcolor="#F5F7FA" valign="middle"><a href="http://litmus.com" target="_blank"><img src="news-4.jpg" width="240" height="130" style="display: block; color: #666666; font-family: Helvetica, arial, sans-serif; font-size: 13px; width: 240px; height: 130px;" alt="alt text here" border="0" class="img-max"></a></td>
+                                                                                    <td align="center" bgcolor="#F5F7FA" valign="middle"><a href="http://litmus.com" target="_blank"><img src="https://thevarsity.herokuapp.com/email/templates/newsletter/news-4.jpg" width="240" height="130" style="display: block; color: #666666; font-family: Helvetica, arial, sans-serif; font-size: 13px; width: 240px; height: 130px;" alt="alt text here" border="0" class="img-max"></a></td>
                                                                                 </tr>
                                                                                 <tr>
                                                                                     <td align="center" style="padding: 15px 0 0 0; font-family: Arial, sans-serif; color: #333333; font-size: 20px;" bgcolor="#F5F7FA">News Item</td>
@@ -454,7 +454,7 @@
 
                                         <table align="left" border="0" cellpadding="0" cellspacing="0" width="115">
                                             <tr>
-                                                <td valign="top" style="padding: 40px 0 0 0;" class="mobile-hide"><a href="http://litmus.com" target="_blank"><img src="calendar.png" alt="alt text here" width="105" height="105" border="0" style="display: block; font-family: Arial; color: #666666; font-size: 14px; width: 105px; height: 105px;"></a></td>
+                                                <td valign="top" style="padding: 40px 0 0 0;" class="mobile-hide"><a href="http://litmus.com" target="_blank"><img src="https://thevarsity.herokuapp.com/email/templates/newsletter/calendar.png" alt="alt text here" width="105" height="105" border="0" style="display: block; font-family: Arial; color: #666666; font-size: 14px; width: 105px; height: 105px;"></a></td>
                                             </tr>
                                         </table>
                                     </div>
@@ -541,7 +541,7 @@
 
                                         <table align="left" border="0" cellpadding="0" cellspacing="0" width="115">
                                             <tr>
-                                                <td valign="top" style="padding: 40px 0 0 0;" class="mobile-hide"><a href="http://litmus.com" target="_blank"><img src="calendar.png" alt="alt text here" width="105" height="105" border="0" style="display: block; font-family: Arial; color: #666666; font-size: 14px; width: 105px; height: 105px;"></a></td>
+                                                <td valign="top" style="padding: 40px 0 0 0;" class="mobile-hide"><a href="http://litmus.com" target="_blank"><img src="https://thevarsity.herokuapp.com/email/templates/newsletter/calendar.png" alt="alt text here" width="105" height="105" border="0" style="display: block; font-family: Arial; color: #666666; font-size: 14px; width: 105px; height: 105px;"></a></td>
                                             </tr>
                                         </table>
                                     </div>
@@ -628,7 +628,7 @@
 
                                         <table align="left" border="0" cellpadding="0" cellspacing="0" width="115">
                                             <tr>
-                                                <td valign="top" style="padding: 40px 0 0 0;" class="mobile-hide"><a href="http://litmus.com" target="_blank"><img src="calendar.png" alt="alt text here" width="105" height="105" border="0" style="display: block; font-family: Arial; color: #666666; font-size: 14px; width: 105px; height: 105px;"></a></td>
+                                                <td valign="top" style="padding: 40px 0 0 0;" class="mobile-hide"><a href="http://litmus.com" target="_blank"><img src="https://thevarsity.herokuapp.com/email/templates/newsletter/calendar.png" alt="alt text here" width="105" height="105" border="0" style="display: block; font-family: Arial; color: #666666; font-size: 14px; width: 105px; height: 105px;"></a></td>
                                             </tr>
                                         </table>
                                     </div>
