--- a/public/email/templates/newsletter/newsletter.html
+++ b/public/email/templates/newsletter/newsletter.html
@@ -2,16 +2,7 @@
 <html>
 <head>
 <title>A Responsive Email Template</title>
-<!--
 
-    An email present from your friends at Litmus (@litmusapp)
-
-    Email is surprisingly hard. While this has been thoroughly tested, your mileage may vary.
-    It's highly recommended that you test using a service like Litmus (http://litmus.com) and your own devices.
-
-    Enjoy!
-
- -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -106,7 +97,7 @@
 
 <!-- HIDDEN PREHEADER TEXT -->
 <div style="display: none; font-size: 1px; color: #fefefe; line-height: 1px; font-family: Helvetica, Arial, sans-serif; max-height: 0px; max-width: 0px; opacity: 0; overflow: hidden;">
-    {{ from }} invited you to the {{ team_name }} team on The Varsity!
+    {{from}} invited you to the {{team_name}} team on The Varsity!
 </div>
 
 <!-- HEADER -->
@@ -121,7 +112,7 @@
             <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 500px;" class="wrapper">
                 <tr>
                     <td align="center" valign="top" style="padding: 15px 0;" class="logo">
-                        <a href="http://litmus.com" target="_blank">
+                        <a href="http://www.thevarsity.co" target="_blank">
                             <img alt="Logo" src="https://thevarsity.herokuapp.com/images/logo_white.png" style="display: block; font-family: Helvetica, Arial, sans-serif; color: #ffffff; font-size: 16px;" border="0">
                         </a>
                     </td>
@@ -148,7 +139,7 @@
                         <table width="100%" border="0" cellspacing="0" cellpadding="0">
                             <tr>
                               	<td class="padding" align="center">
-                                    <a href="http://litmus.com" target="_blank">
+                                    <a href="http://www.thevarsity.co" target="_blank">
                                         <img src="{{team_image}}" width="500" height="500" border="0" alt="Insert alt text here" style="display: block; color: #666666;  font-family: Helvetica, arial, sans-serif; font-size: 16px;" class="img-max">
                                     </a>
                                 </td>
@@ -178,7 +169,7 @@
                                             <td align="center" style="padding-top: 25px;" class="padding">
                                                 <table border="0" cellspacing="0" cellpadding="0" class="mobile-button-container">
                                                     <tr>
-                                                    	<td align="center" style="border-radius: 3px;" bgcolor="#256F9C"><a href="https://litmus.com" target="_blank" style="font-size: 16px; font-family: Helvetica, Arial, sans-serif; color: #ffffff; text-decoration: none; color: #ffffff; text-decoration: none; border-radius: 3px; padding: 15px 25px; border: 1px solid #256F9C; display: inline-block;" class="mobile-button">Accept Invitation &rarr;</a></td>
+                                                    	<td align="center" style="border-radius: 3px;" bgcolor="#256F9C"><a href="http://www.thevarsity.co" target="_blank" style="font-size: 16px; font-family: Helvetica, Arial, sans-serif; color: #ffffff; text-decoration: none; color: #ffffff; text-decoration: none; border-radius: 3px; padding: 15px 25px; border: 1px solid #256F9C; display: inline-block;" class="mobile-button">Accept Invitation &rarr;</a></td>
                                                     </tr>
                                                 </table>
                                             </td>
@@ -244,7 +235,7 @@
                                                             <td style="padding: 20px 0 30px 0;">
                                                                 <table cellpadding="0" cellspacing="0" border="0" width="100%">
                                                                     <tr>
-                                                                        <td align="center" bgcolor="#F5F7FA" valign="middle"><a href="http://litmus.com" target="_blank"><img src="https://thevarsity.herokuapp.com/images/satellite-2.png" style="display: block; color: #666666; font-family: Helvetica, arial, sans-serif; font-size: 13px; width: 240px; height: 130px;" alt="Fluid images" border="0" class="img-max"></a></td>
+                                                                        <td align="center" bgcolor="#F5F7FA" valign="middle"><a href="http://www.thevarsity.co" target="_blank"><img src="https://thevarsity.herokuapp.com/images/satellite-2.png" style="display: block; color: #666666; font-family: Helvetica, arial, sans-serif; font-size: 13px; width: 240px; height: 130px;" alt="Fluid images" border="0" class="img-max"></a></td>
                                                                     </tr>
                                                                     <tr>
                                                                         <td align="center" style="padding: 15px 0 0 0; font-family: Arial, sans-serif; color: #333333; font-size: 20px;" bgcolor="#F5F7FA">Better Opportunities</td>
@@ -282,16 +273,16 @@
                                                                         <td style="padding: 20px 0 30px 0;">
                                                                             <table cellpadding="0" cellspacing="0" border="0" width="100%">
                                                                                 <tr>
-                                                                                    <td align="center" bgcolor="#F5F7FA" valign="middle"><a href="http://litmus.com" target="_blank"><img src="https://thevarsity.herokuapp.com/email/templates/newsletter/news-2.jpg" width="240" height="130" style="display: block; color: #666666; font-family: Helvetica, arial, sans-serif; font-size: 13px; width: 240px; height: 130px;" alt="alt text here" border="0" class="img-max"></a></td>
+                                                                                    <td align="center" bgcolor="#F5F7FA" valign="middle"><a href="http://www.thevarsity.co" target="_blank"><img src="https://thevarsity.herokuapp.com/images/kithen.jpg" style="display: block; color: #666666; font-family: Helvetica, arial, sans-serif; font-size: 13px; width: 240px; height: 130px;" alt="alt text here" border="0" class="img-max"></a></td>
                                                                                 </tr>
                                                                                 <tr>
-                                                                                    <td align="center" style="padding: 15px 0 0 0; font-family: Arial, sans-serif; color: #333333; font-size: 20px;" bgcolor="#F5F7FA">News Item</td>
+                                                                                    <td align="center" style="padding: 15px 0 0 0; font-family: Arial, sans-serif; color: #333333; font-size: 20px;" bgcolor="#F5F7FA">Stronger Connections</td>
                                                                                 </tr>
                                                                                 <tr>
-                                                                                    <td align="center" style="padding: 5px 0 0 0; font-family: Arial, sans-serif; color: #666666; font-size: 14px; line-height: 20px;" bgcolor="#F5F7FA">Integer ut tempor lectus. Vivamus at gravida arcu.</td>
+                                                                                    <td align="center" style="padding: 5px 0 0 0; font-family: Arial, sans-serif; color: #666666; font-size: 14px; line-height: 20px;" bgcolor="#F5F7FA">Groups are maintained by members through invite-only. No more spam from salesman, recruiters, and such. The Varsity cuts out the noise.</td>
                                                                                 </tr>
                                                                                 <tr>
-                                                                                    <td align="center" style="padding: 5px 0 0 0; font-family: Arial, sans-serif; color: #666666; font-size: 14px; line-height: 20px;" bgcolor="#F5F7FA"><a href="http://litmus.com" style="color: #256F9C; text-decoration: none;">Read More &rarr;</a></td>
+                                                                                    <td align="center" style="padding: 5px 0 0 0; font-family: Arial, sans-serif; color: #666666; font-size: 14px; line-height: 20px;" bgcolor="#F5F7FA"><a href="http://www.thevarsity.co" style="color: #256F9C; text-decoration: none;">Read More &rarr;</a></td>
                                                                                 </tr>
                                                                             </table>
                                                                         </td>
@@ -344,16 +335,16 @@
                                                             <td style="padding: 20px 0 30px 0;">
                                                                 <table cellpadding="0" cellspacing="0" border="0" width="100%">
                                                                     <tr>
-                                                                        <td align="center" bgcolor="#F5F7FA" valign="middle"><a href="http://litmus.com" target="_blank"><img src="https://thevarsity.herokuapp.com/email/templates/newsletter/news-3.jpg" width="240" height="130" style="display: block; color: #666666; font-family: Helvetica, arial, sans-serif; font-size: 13px; width: 240px; height: 130px;" alt="alt text here" border="0" class="img-max"></a></td>
+                                                                        <td align="center" bgcolor="#F5F7FA" valign="middle"><a href="http://www.thevarsity.co" target="_blank"><img src="https://thevarsity.herokuapp.com/images/meetup.jpg" style="display: block; color: #666666; font-family: Helvetica, arial, sans-serif; font-size: 13px; width: 240px; height: 130px;" alt="alt text here" border="0" class="img-max"></a></td>
                                                                     </tr>
                                                                     <tr>
-                                                                        <td align="center" style="padding: 15px 0 0 0; font-family: Arial, sans-serif; color: #333333; font-size: 20px;" bgcolor="#F5F7FA">News Item</td>
+                                                                        <td align="center" style="padding: 15px 0 0 0; font-family: Arial, sans-serif; color: #333333; font-size: 20px;" bgcolor="#F5F7FA">More Revenue</td>
                                                                     </tr>
                                                                     <tr>
-                                                                        <td align="center" style="padding: 5px 0 0 0; font-family: Arial, sans-serif; color: #666666; font-size: 14px; line-height: 20px;" bgcolor="#F5F7FA">Integer ut tempor lectus. Vivamus at gravida arcu.</td>
+                                                                        <td align="center" style="padding: 5px 0 0 0; font-family: Arial, sans-serif; color: #666666; font-size: 14px; line-height: 20px;" bgcolor="#F5F7FA">Group admins can charge fees for posting to the bulletin board. Fees go directly to the group moderator. * This is a premium feature.</td>
                                                                     </tr>
                                                                     <tr>
-                                                                        <td align="center" style="padding: 5px 0 0 0; font-family: Arial, sans-serif; color: #666666; font-size: 14px; line-height: 20px;" bgcolor="#F5F7FA"><a href="http://litmus.com" style="color: #256F9C; text-decoration: none;">Read More &rarr;</a></td>
+                                                                        <td align="center" style="padding: 5px 0 0 0; font-family: Arial, sans-serif; color: #666666; font-size: 14px; line-height: 20px;" bgcolor="#F5F7FA"><a href="http://www.thevarsity.co" style="color: #256F9C; text-decoration: none;">Read More &rarr;</a></td>
                                                                     </tr>
                                                                 </table>
                                                             </td>
@@ -382,16 +373,16 @@
                                                                         <td style="padding: 20px 0 30px 0;">
                                                                             <table cellpadding="0" cellspacing="0" border="0" width="100%">
                                                                                 <tr>
-                                                                                    <td align="center" bgcolor="#F5F7FA" valign="middle"><a href="http://litmus.com" target="_blank"><img src="https://thevarsity.herokuapp.com/email/templates/newsletter/news-4.jpg" width="240" height="130" style="display: block; color: #666666; font-family: Helvetica, arial, sans-serif; font-size: 13px; width: 240px; height: 130px;" alt="alt text here" border="0" class="img-max"></a></td>
+                                                                                    <td align="center" bgcolor="#F5F7FA" valign="middle"><a href="http://www.thevarsity.co" target="_blank"><img src="http://www.thevarsity.co/images/girls.jpg" style="display: block; color: #666666; font-family: Helvetica, arial, sans-serif; font-size: 13px; width: 240px; height: 130px;" alt="alt text here" border="0" class="img-max"></a></td>
                                                                                 </tr>
                                                                                 <tr>
-                                                                                    <td align="center" style="padding: 15px 0 0 0; font-family: Arial, sans-serif; color: #333333; font-size: 20px;" bgcolor="#F5F7FA">News Item</td>
+                                                                                    <td align="center" style="padding: 15px 0 0 0; font-family: Arial, sans-serif; color: #333333; font-size: 20px;" bgcolor="#F5F7FA">Industry Insight</td>
                                                                                 </tr>
                                                                                 <tr>
                                                                                     <td align="center" style="padding: 5px 0 0 0; font-family: Arial, sans-serif; color: #666666; font-size: 14px; line-height: 20px;" bgcolor="#F5F7FA">Integer ut tempor lectus. Vivamus at gravida arcu.</td>
                                                                                 </tr>
                                                                                 <tr>
-                                                                                    <td align="center" style="padding: 5px 0 0 0; font-family: Arial, sans-serif; color: #666666; font-size: 14px; line-height: 20px;" bgcolor="#F5F7FA"><a href="http://litmus.com" style="color: #256F9C; text-decoration: none;">Read More &rarr;</a></td>
+                                                                                    <td align="center" style="padding: 5px 0 0 0; font-family: Arial, sans-serif; color: #666666; font-size: 14px; line-height: 20px;" bgcolor="#F5F7FA"><a href="http://www.thevarsity.co" style="color: #256F9C; text-decoration: none;">Read More &rarr;</a></td>
                                                                                 </tr>
                                                                             </table>
                                                                         </td>
@@ -439,11 +430,11 @@
             <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" style="max-width: 500px;" class="responsive-table">
                 <tr>
                     <td align="center" style="font-size: 12px; line-height: 18px; font-family: Helvetica, Arial, sans-serif; color:#666666;">
-                        1234 Main Street, Anywhere, MA 01234, USA
+                        &copy; 2017, The Varsity
                         <br>
-                        <a href="http://litmus.com" target="_blank" style="color: #666666; text-decoration: none;">Unsubscribe</a>
+                        <a href="http://www.thevarsity.co" target="_blank" style="color: #666666; text-decoration: none;">www.thevarsity.co</a>
                         <span style="font-family: Arial, sans-serif; font-size: 12px; color: #444444;">&nbsp;&nbsp;|&nbsp;&nbsp;</span>
-                        <a href="http://litmus.com" target="_blank" style="color: #666666; text-decoration: none;">View this email in your browser</a>
+                        <a href="https://thevarsity.herokuapp.com/account/unsubscribe={{email}}" target="_blank" style="color: #666666; text-decoration: none;">Unsubscribe</a>
                     </td>
                 </tr>
             </table>
