--- a/public/email/templates/newsletter/newsletter.html
+++ b/public/email/templates/newsletter/newsletter.html
@@ -155,7 +155,7 @@
                                             <td align="center" style="padding: 20px 0 0 0; font-size: 16px; line-height: 25px; font-family: Helvetica, Arial, sans-serif; color: #666666;" class="padding">
                                                 Congratulations, you have been invited to The Varsity! The Varsity is a collection of online communities organized into groups by professional skill.
                                                 <br /><br />
-                                                {{from}} thinks you would be a great addition to the {{team_name}} team. To accept the invitation, click below:
+                                                {{from}} thinks you would be a great addition to the <strong>{{team_name}}</strong> team. To accept the invitation, click below:
                                             </td>
                                         </tr>
                                     </table>
@@ -434,7 +434,7 @@
                         <br>
                         <a href="http://www.thevarsity.co" target="_blank" style="color: #666666; text-decoration: none;">www.thevarsity.co</a>
                         <span style="font-family: Arial, sans-serif; font-size: 12px; color: #444444;">&nbsp;&nbsp;|&nbsp;&nbsp;</span>
-                        <a href="https://thevarsity.herokuapp.com/account/unsubscribe={{email}}" target="_blank" style="color: #666666; text-decoration: none;">Unsubscribe</a>
+                        <a href="https://thevarsity.herokuapp.com/account/unsubscribe?email={{email}}" target="_blank" style="color: #666666; text-decoration: none;">Unsubscribe</a>
                     </td>
                 </tr>
             </table>
