--- a/public/email/templates/newsletter/newsletter.html
+++ b/public/email/templates/newsletter/newsletter.html
@@ -379,7 +379,7 @@
                                                                                     <td align="center" style="padding: 15px 0 0 0; font-family: Arial, sans-serif; color: #333333; font-size: 20px;" bgcolor="#F5F7FA">Industry Insight</td>
                                                                                 </tr>
                                                                                 <tr>
-                                                                                    <td align="center" style="padding: 5px 0 0 0; font-family: Arial, sans-serif; color: #666666; font-size: 14px; line-height: 20px;" bgcolor="#F5F7FA">Learn from your peers as you share professional insight on how to improve, gain new clientele, promote your brand and expand you business.</td>
+                                                                                    <td align="center" style="padding: 5px 0 0 0; font-family: Arial, sans-serif; color: #666666; font-size: 14px; line-height: 20px;" bgcolor="#F5F7FA">Learn from your peers as you share professional insight on how to hone your craft, gain new clientele, promote your brand and expand your business.</td>
                                                                                 </tr>
                                                                                 <tr>
                                                                                     <td align="center" style="padding: 5px 0 0 0; font-family: Arial, sans-serif; color: #666666; font-size: 14px; line-height: 20px;" bgcolor="#F5F7FA"><a href="http://www.thevarsity.co" style="color: #256F9C; text-decoration: none;">Read More &rarr;</a></td>
