add access code to invitation

--- a/public/email/templates/newsletter/newsletter.html
+++ b/public/email/templates/newsletter/newsletter.html
@@ -171,6 +171,9 @@
                                                     <tr>
                                                     	<td align="center" style="border-radius: 3px;" bgcolor="#256F9C"><a href="http://www.thevarsity.co" target="_blank" style="font-size: 16px; font-family: Helvetica, Arial, sans-serif; color: #ffffff; text-decoration: none; color: #ffffff; text-decoration: none; border-radius: 3px; padding: 15px 25px; border: 1px solid #256F9C; display: inline-block;" class="mobile-button">Accept Invitation &rarr;</a></td>
                                                     </tr>
+                                                    <tr>
+                                                        <td align="center" style="border-radius: 3px" bgcolor="#fff"><a href="http://www.thevarsity.co" target="_blank" style="font-size: 16px; font-family: Helvetica, Arial, sans-serif; color: #ffffff; text-decoration: none; color: #333; text-decoration: none; border-radius: 3px; padding: 15px 25px; border: 2px solid green; display: inline-block;margin-top:24px; " class="mobile-button">Access Code: {{code}}</a></td>
+                                                    </tr>
                                                 </table>
                                             </td>
                                         </tr>
