updated invitation email

--- a/public/email/templates/newsletter/newsletter.html
+++ b/public/email/templates/newsletter/newsletter.html
@@ -156,6 +156,8 @@
                                                 Congratulations, you have been invited to The Varsity! The Varsity is a collection of online communities organized into groups by professional skill.
                                                 <br /><br />
                                                 {{from}} thinks you would be a great addition to the <strong>{{team_name}}</strong> team. To accept the invitation, click below:
+                                                <br /><br />
+                                                <strong>Invite Code: {{code}}</strong>
                                             </td>
                                         </tr>
                                     </table>
@@ -170,9 +172,6 @@
                                                 <table border="0" cellspacing="0" cellpadding="0" class="mobile-button-container">
                                                     <tr>
                                                     	<td align="center" style="border-radius: 3px;" bgcolor="#256F9C"><a href="http://www.thevarsity.co?invite={{invitation}}" target="_blank" style="font-size: 16px; font-family: Helvetica, Arial, sans-serif; color: #ffffff; text-decoration: none; color: #ffffff; text-decoration: none; border-radius: 3px; padding: 15px 25px; border: 1px solid #256F9C; display: inline-block;" class="mobile-button">Accept Invitation &rarr;</a></td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td align="center" style="border-radius: 3px" bgcolor="#fff"><a href="http://www.thevarsity.co?invite={{invitation}}" target="_blank" style="font-size: 16px; font-family: Helvetica, Arial, sans-serif; color: #ffffff; text-decoration: none; color: #333; text-decoration: none; border-radius: 3px; padding: 15px 25px; border: 2px solid green; display: inline-block;margin-top:24px; " class="mobile-button">Invite Code: {{code}}</a></td>
                                                     </tr>
                                                 </table>
                                             </td>
@@ -433,7 +432,7 @@
             <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" style="max-width: 500px;" class="responsive-table">
                 <tr>
                     <td align="center" style="font-size: 12px; line-height: 18px; font-family: Helvetica, Arial, sans-serif; color:#666666;">
-                        &copy; 2017, The Varsity
+                        &copy; The Varsity. 2017
                         <br>
                         <a href="http://www.thevarsity.co?invite={{invitation}}" target="_blank" style="color: #666666; text-decoration: none;">www.thevarsity.co</a>
                         <span style="font-family: Arial, sans-serif; font-size: 12px; color: #444444;">&nbsp;&nbsp;|&nbsp;&nbsp;</span>
